--- a/ReproduceRenderErrorOnDispose.csproj
+++ b/ReproduceRenderErrorOnDispose.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Fluxor" Version="3.7.0" />
     <PackageReference Include="Fluxor.Blazor.Web" Version="3.7.0" />
     <PackageReference Include="Fluxor.Blazor.Web.ReduxDevTools" Version="3.7.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
 </Project>
